[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Vitaly Polyakov <vit.polyakov71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
